changed the name of tic tac tae image

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div class="ball2"style="animation-duration: 6s"></div>
   <div class="title_container">Play Zone</div>
   <div class="game_selection_area">
-      <div class="game_1">TIC TAC TOE <img src="images/Tic-tac-toe.png" alt="Tic-tac-toe"> </div>
+      <div class="game_1">TIC TAC TOE <img src="images/tic-tac-toe.png" alt="Tic-tac-toe"> </div>
       <div class="game_2">SNAKE GAME<img src="images/snake.png" alt="snake"> </div>
       <div class="game_3">FLIP FLOP<img src="images/card.png" alt="card"> </div>
   </div>  
